--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.dominikcebula.amazonaws.dynamodb.embedded</groupId>
     <artifactId>dynamodb-embedded-junit-extension</artifactId>
-    <version>1.1</version>
+    <version>1.2-SNAPSHOT</version>
 
     <name>dynamodb-embedded-junit-extension</name>
     <description>JUnit 5 extension allowing you to run an Embedded DynamoDB during unit tests.</description>
@@ -31,7 +31,7 @@
         <developerConnection>scm:git:git@github.com:dominikcebula/dynamodb-embedded-junit-extension.git
         </developerConnection>
         <url>https://github.com/dominikcebula/dynamodb-embedded-junit-extension</url>
-        <tag>dynamodb-embedded-junit-extension-1.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <properties>
